// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function onBlur]}
    onClick={[Function onClick]}
    onFocus={[Function onFocus]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug changing component: bananaFresh button message should now be "fresh" 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function onBlur]}
    onClick={[Function onClick]}
    onFocus={[Function onFocus]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug with all props filtered 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text>
    not fresh
  </Text>
  <TextInput />
  <TextInput />
  <TextInput />
  <TextInput />
  <View>
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text>
    First Text
  </Text>
  <Text>
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug with only children prop 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text>
    not fresh
  </Text>
  <TextInput />
  <TextInput />
  <TextInput />
  <TextInput />
  <View>
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text>
    First Text
  </Text>
  <Text>
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug with only prop whose value is bananaChef 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text>
    not fresh
  </Text>
  <TextInput />
  <TextInput
    testID="bananaChef"
  />
  <TextInput />
  <TextInput />
  <View>
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text>
    First Text
  </Text>
  <Text>
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug with only props from TextInput components 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text>
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <View>
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text>
    First Text
  </Text>
  <Text>
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: another custom message 1`] = `
"another custom message

<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function onBlur]}
    onClick={[Function onClick]}
    onFocus={[Function onFocus]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: shallow 1`] = `
"<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <MyButton
    onPress={[Function anonymous]}
    type="primary"
  >
    Change freshness!
  </MyButton>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: shallow with message 1`] = `
"my other custom message

<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <MyButton
    onPress={[Function anonymous]}
    type="primary"
  >
    Change freshness!
  </MyButton>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`debug: with message 1`] = `
"my custom message

<View>
  <Text>
    Is the banana fresh?
  </Text>
  <Text
    testID="bananaFresh"
  >
    not fresh
  </Text>
  <TextInput
    placeholder="Add custom freshness"
    testID="bananaCustomFreshness"
    value="Custom Freshie"
  />
  <TextInput
    defaultValue="What did you inspect?"
    placeholder="Who inspected freshness?"
    testID="bananaChef"
    value="I inspected freshie"
  />
  <TextInput
    defaultValue="What banana?"
  />
  <TextInput
    defaultValue="hello"
    value=""
  />
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function onBlur]}
    onClick={[Function onClick]}
    onFocus={[Function onFocus]}
    onResponderGrant={[Function onResponderGrant]}
    onResponderMove={[Function onResponderMove]}
    onResponderRelease={[Function onResponderRelease]}
    onResponderTerminate={[Function onResponderTerminate]}
    onResponderTerminationRequest={[Function onResponderTerminationRequest]}
    onStartShouldSetResponder={[Function onStartShouldSetResponder]}
  >
    <Text>
      Change freshness!
    </Text>
  </View>
  <Text
    testID="duplicateText"
  >
    First Text
  </Text>
  <Text
    testID="duplicateText"
  >
    Second Text
  </Text>
  <Text>
    0
  </Text>
</View>"
`;

exports[`toJSON 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
>
  <Text>
    press me
  </Text>
</View>
`;
